# rust_programming_language_exercises

add/add-one/: Cargo.toml
add/add-two/: Cargo.toml
add/adder/: Cargo.toml
advanced_features/advanced_functions_closures/: Cargo.toml
advanced_features/advanced_traits/: Cargo.toml
advanced_features/advanced_types/: Cargo.toml
advanced_features/unsafe_rust/: Cargo.toml
advanced_features/unsafe_rust/src/: lib.rs  main.rs
automated_tests/adder/: Cargo.toml
automated_tests/test_organization/: Cargo.toml
cargo_crates/my_art/: Cargo.toml
cargo_crates/my_crate/: Cargo.toml
common_collections/exercises/: Cargo.toml
common_collections/hash_maps_basics/: Cargo.toml
common_collections/utf8_encoded_strings/: Cargo.toml
common_collections/vectors_basics/: Cargo.toml
common_programming_concepts/branches/: Cargo.toml
common_programming_concepts/data_types/: Cargo.toml
common_programming_concepts/functions/: Cargo.toml
common_programming_concepts/loops/: Cargo.toml
common_programming_concepts/variables/: Cargo.toml
data_types/src/: main.rs
enums_pattern_matching/enums_basics/: Cargo.toml
enums_pattern_matching/if_let/: Cargo.toml
enums_pattern_matching/match_operator/: Cargo.toml
error_handling/panic/: Cargo.toml
fearless_concurrency/message_passing/: Cargo.toml
fearless_concurrency/mutex/: Cargo.toml
fearless_concurrency/threads/: Cargo.toml
functional_rust/closures/: Cargo.toml
functional_rust/iterators/: Cargo.toml
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
minigrep/: Cargo.toml  output.txt
(+86 files in other folders)
