[package]
name = "unsafe_rust"
version = "0.1.0"
authors = ["Helgard Richard Ferreira <hrfer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unsafe_rust"
crate-type = ["cdylib"]         # Creates dynamic lib
#crate-type = ["staticlib"]      # Creates static lib

[dependencies]
